--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 //    implementation 'com.google.code.gson:gson:2.8.5'
     implementation project(':baselib')
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
